typescript/checker/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorOverloadsWithDefaultValues.ts.stderr
error: TS2371
 --> $DIR/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorOverloadsWithDefaultValues.ts:3:17
  |
3 |     constructor(x = 1); // error
  |                 ^^^^^

error: TS2371
  --> $DIR/tests/conformance/classes/constructorDeclarations/constructorParameters/constructorOverloadsWithDefaultValues.ts:10:17
   |
10 |     constructor(x = 1); // error
   |                 ^^^^^

